--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 <body>
 <ul>
   <li>2 slices of bread</li>
-  <li>4 slices of cheese</li>
+  <ul><li>4 slices of cheese</li>
+          <li>cheedar</li>
+          <li>mozzarella</li>
+          <li>pepper jack</li>
+  </ul>
   <li>1 tbsp of butter</li>
 </ul>
 
