--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 <body>
 <ul>
   <li>2 slices of bread</li>
-  <ul><li>4 slices of cheese</li>
-          <li>cheedar</li>
-          <li>mozzarella</li>
-          <li>pepper jack</li>
+  <li>4 slices of cheese</li>
+    <ul>
+       <li>cheedar</li>
+       <li>mozzarella</li>
+       <li>pepper jack</li>
+    </ul>     
   <li>1 tbsp of butter</li>
 </ul>
 
